--- a/index.html
+++ b/index.html
@@ -3,8 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 </head>
 <body>
-
+<script>
+    $.ajax({
+        type: "GET",
+        url: "http://localhost:8080/products",
+        success: function (data) {
+            console.log(data)
+        }, error: function (error) {
+            console.log(error)
+        }
+    })
+</script>
 </body>
 </html>
